--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "scansheet-agent"
-version = "0.2.0"
+version = "0.2.1"
 description = "ScanSheet Agent Library"
 requires-python = ">=3.10"
 dependencies = [
@@ -16,7 +16,8 @@ requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-packages = ["src"]
+package-dir = {"" = "src"}
+packages = ["scansheet_agent"]
 
 [project.optional-dependencies]
 dev = [
