--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "langchain-openai==0.3.28",
     "pydantic==2.11.5",
     "openai==1.97.0",
+    "mistralai==1.9.2"
 ]
 
 [build-system]
