--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "scansheet-agent"
-version = "1.1.1"
+version = "1.2.0"
 description = "ScanSheet Agent Library"
 requires-python = ">=3.10"
 authors = [
@@ -18,7 +18,8 @@ dependencies = [
     "langchain-openai==0.3.28",
     "pydantic==2.11.5",
     "openai==1.97.0",
-    "mistralai==1.9.2"
+    "mistralai==1.9.2",
+    "dvc[gdrive]"
 ]
 
 [build-system]
